--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -74,11 +74,15 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="wealth-journey" title="Calculate how your savings will grow">
+            <NavLink class="nav-link" href="wealth-journey" title="How your savings will grow">
                 <span class="bi bi-calculator" aria-hidden="true"></span> Wealth Journey
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="howmuch-to-save-per-month" title="Monthly saving projections">
+                <span class="bi bi-calculator" aria-hidden="true"></span> Monthly savings
+            </NavLink>
+        </div>
         <!-- Informational pages -->
         <div class="nav-item px-3 mt-2">
             <NavLink class="nav-link" href="/about" title="About this site">
@@ -205,7 +209,7 @@
         // Navigate to a server endpoint that will trigger the Google challenge
         if (Navigation is not null)
         {
-            Navigation.NavigateTo("/signin-google", forceLoad: true);
+            Navigation.NavigateTo("/signin-google-challenge", forceLoad: true);
         }
     }
 
